@@ -20,9 +20,15 @@
 package org.elasticsearch.ingest.common;
 
 import org.elasticsearch.ElasticsearchException;
+import org.elasticsearch.common.settings.Settings;
+import org.elasticsearch.common.xcontent.XContentParseException;
+import org.elasticsearch.script.IngestScript;
+import org.elasticsearch.script.MockScriptEngine;
 import org.elasticsearch.script.Script;
 import org.elasticsearch.script.ScriptException;
+import org.elasticsearch.script.ScriptModule;
 import org.elasticsearch.script.ScriptService;
+import org.elasticsearch.script.ScriptType;
 import org.elasticsearch.test.ESTestCase;
 import org.junit.Before;
 
@@ -30,6 +36,7 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
+import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.is;
 import static org.mockito.Matchers.any;
@@ -39,13 +46,9 @@ import static org.mockito.Mockito.when;
 public class ScriptProcessorFactoryTests extends ESTestCase {
 
     private ScriptProcessor.Factory factory;
-    private static final Map<String, String> ingestScriptParamToType;
-    static {
-        Map<String, String> map = new HashMap<>();
-        map.put("id", "stored");
-        map.put("source", "inline");
-        ingestScriptParamToType = Collections.unmodifiableMap(map);
-    }
+    private static final Map<String, String> INGEST_SCRIPT_PARAM_TO_TYPE = Map.of(
+            "id", "stored",
+            "source", "inline");
 
     @Before
     public void init() {
@@ -53,24 +56,32 @@ public class ScriptProcessorFactoryTests extends ESTestCase {
     }
 
     public void testFactoryValidationWithDefaultLang() throws Exception {
+        ScriptService mockedScriptService = mock(ScriptService.class);
+        when(mockedScriptService.compile(any(), any())).thenReturn(mock(IngestScript.Factory.class));
+        factory = new ScriptProcessor.Factory(mockedScriptService);
+
         Map<String, Object> configMap = new HashMap<>();
         String randomType = randomFrom("id", "source");
         configMap.put(randomType, "foo");
-        ScriptProcessor processor = factory.create(null, randomAlphaOfLength(10), configMap);
+        ScriptProcessor processor = factory.create(null, randomAlphaOfLength(10), null, configMap);
         assertThat(processor.getScript().getLang(), equalTo(randomType.equals("id") ? null : Script.DEFAULT_SCRIPT_LANG));
-        assertThat(processor.getScript().getType().toString(), equalTo(ingestScriptParamToType.get(randomType)));
+        assertThat(processor.getScript().getType().toString(), equalTo(INGEST_SCRIPT_PARAM_TO_TYPE.get(randomType)));
         assertThat(processor.getScript().getParams(), equalTo(Collections.emptyMap()));
     }
 
     public void testFactoryValidationWithParams() throws Exception {
+        ScriptService mockedScriptService = mock(ScriptService.class);
+        when(mockedScriptService.compile(any(), any())).thenReturn(mock(IngestScript.Factory.class));
+        factory = new ScriptProcessor.Factory(mockedScriptService);
+
         Map<String, Object> configMap = new HashMap<>();
         String randomType = randomFrom("id", "source");
         Map<String, Object> randomParams = Collections.singletonMap(randomAlphaOfLength(10), randomAlphaOfLength(10));
         configMap.put(randomType, "foo");
         configMap.put("params", randomParams);
-        ScriptProcessor processor = factory.create(null, randomAlphaOfLength(10), configMap);
+        ScriptProcessor processor = factory.create(null, randomAlphaOfLength(10), null, configMap);
         assertThat(processor.getScript().getLang(), equalTo(randomType.equals("id") ? null : Script.DEFAULT_SCRIPT_LANG));
-        assertThat(processor.getScript().getType().toString(), equalTo(ingestScriptParamToType.get(randomType)));
+        assertThat(processor.getScript().getType().toString(), equalTo(INGEST_SCRIPT_PARAM_TO_TYPE.get(randomType)));
         assertThat(processor.getScript().getParams(), equalTo(randomParams));
     }
 
@@ -80,9 +91,9 @@ public class ScriptProcessorFactoryTests extends ESTestCase {
         configMap.put("source", "bar");
         configMap.put("lang", "mockscript");
 
-        ElasticsearchException exception = expectThrows(ElasticsearchException.class,
-            () -> factory.create(null, randomAlphaOfLength(10), configMap));
-        assertThat(exception.getMessage(), is("[script] failed to parse field [source]"));
+        XContentParseException exception = expectThrows(XContentParseException.class,
+            () -> factory.create(null, randomAlphaOfLength(10), null, configMap));
+        assertThat(exception.getMessage(), containsString("[script] failed to parse field [source]"));
     }
 
     public void testFactoryValidationAtLeastOneScriptingType() throws Exception {
@@ -90,16 +101,20 @@ public class ScriptProcessorFactoryTests extends ESTestCase {
         configMap.put("lang", "mockscript");
 
         IllegalArgumentException exception = expectThrows(IllegalArgumentException.class,
-            () -> factory.create(null, randomAlphaOfLength(10), configMap));
+            () -> factory.create(null, randomAlphaOfLength(10), null, configMap));
 
         assertThat(exception.getMessage(), is("must specify either [source] for an inline script or [id] for a stored script"));
     }
 
     public void testInlineBackcompat() throws Exception {
+        ScriptService mockedScriptService = mock(ScriptService.class);
+        when(mockedScriptService.compile(any(), any())).thenReturn(mock(IngestScript.Factory.class));
+        factory = new ScriptProcessor.Factory(mockedScriptService);
+
         Map<String, Object> configMap = new HashMap<>();
         configMap.put("inline", "code");
 
-        factory.create(null, randomAlphaOfLength(10), configMap);
+        factory.create(null, randomAlphaOfLength(10), null, configMap);
         assertWarnings("Deprecated field [inline] used, expected [source] instead");
     }
 
@@ -115,8 +130,48 @@ public class ScriptProcessorFactoryTests extends ESTestCase {
         configMap.put(randomType, "my_script");
 
         ElasticsearchException exception = expectThrows(ElasticsearchException.class,
-            () -> factory.create(null, randomAlphaOfLength(10), configMap));
+            () -> factory.create(null, randomAlphaOfLength(10), null, configMap));
 
         assertThat(exception.getMessage(), is("compile-time exception"));
+    }
+
+    public void testInlineIsCompiled() throws Exception {
+        String scriptName = "foo";
+        ScriptService scriptService = new ScriptService(Settings.builder().build(),
+            Collections.singletonMap(
+                Script.DEFAULT_SCRIPT_LANG, new MockScriptEngine(
+                    Script.DEFAULT_SCRIPT_LANG,
+                    Collections.singletonMap(scriptName, ctx -> {
+                        ctx.put("foo", "bar");
+                        return null;
+                    }),
+                    Collections.emptyMap()
+                )
+            ), new HashMap<>(ScriptModule.CORE_CONTEXTS));
+        factory = new ScriptProcessor.Factory(scriptService);
+
+        Map<String, Object> configMap = new HashMap<>();
+        configMap.put("source", scriptName);
+        ScriptProcessor processor = factory.create(null, null, randomAlphaOfLength(10), configMap);
+        assertThat(processor.getScript().getLang(), equalTo(Script.DEFAULT_SCRIPT_LANG));
+        assertThat(processor.getScript().getType(), equalTo(ScriptType.INLINE));
+        assertThat(processor.getScript().getParams(), equalTo(Collections.emptyMap()));
+        assertNotNull(processor.getPrecompiledIngestScript());
+        Map<String, Object> ctx = new HashMap<>();
+        processor.getPrecompiledIngestScript().execute(ctx);
+        assertThat(ctx.get("foo"), equalTo("bar"));
+    }
+
+    public void testStoredIsNotCompiled() throws Exception {
+        ScriptService mockedScriptService = mock(ScriptService.class);
+        when(mockedScriptService.compile(any(), any())).thenReturn(mock(IngestScript.Factory.class));
+        factory = new ScriptProcessor.Factory(mockedScriptService);
+        Map<String, Object> configMap = new HashMap<>();
+        configMap.put("id", "script_name");
+        ScriptProcessor processor = factory.create(null, null, randomAlphaOfLength(10), configMap);
+        assertNull(processor.getScript().getLang());
+        assertThat(processor.getScript().getType(), equalTo(ScriptType.STORED));
+        assertThat(processor.getScript().getParams(), equalTo(Collections.emptyMap()));
+        assertNull(processor.getPrecompiledIngestScript());
     }
 }
